--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/nbproject/project.properties
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -42,7 +43,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${reference.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb.dist}
+    ${reference.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb.dist}:\
+    ${libs.primefaces.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
