adding default templates adding index page and login

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /nbproject/private/
 /TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/nbproject/private/
 /TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-ejb/nbproject/private/
+/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-ejb/build/
+/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-ejb/dist/
+/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/build/
+/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/dist/
+/build/
+/dist/
