--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/nbproject/project.properties
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.primefaces-5.2.jar=C:\\Users\\MyPC\\Documents\\NetBeansProjects\\TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy\\TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-ejb\\libs\\primefaces-5.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +45,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${reference.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb.dist}:\
-    ${libs.primefaces.classpath}
+    ${file.reference.primefaces-5.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
