-projet renommer -ajout Listener -et correction divers

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 /TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/dist/
 /build/
 /dist/
+/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb/nbproject/private/
+/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/nbproject/private/
+/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb/build/
+/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb/dist/
+/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/build/
+/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/dist/
