--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,7 @@
 build.classes.excludes=**/*.java,**/*.form,**/.nbattrs
 build.dir=build
 build.generated.dir=${build.dir}/generated
-client.module.uri=TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war
+client.module.uri=TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war
 client.urlPart=
 debug.classpath=${javac.classpath}::${jar.content.additional}:${run.classpath}
 display.browser=true
@@ -22,8 +22,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.content.additional=\
-    ${reference.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war.dist-ear}:\
-    ${reference.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb.dist-ear}
+    ${reference.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb.dist-ear}:\
+    ${reference.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war.dist-ear}
 jar.name=TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy.ear
 javac.debug=true
 javac.deprecation=false
@@ -32,9 +32,10 @@ javac.target=1.8
 meta.inf=src/conf
 no.dependencies=false
 platform.active=default_platform
-project.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb=TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-ejb
-project.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war=TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war
+project.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb=TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb
+project.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war=TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war
 reference.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb.dist-ear=${project.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb}/dist/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb.jar
 reference.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war.dist-ear=${project.TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war}/dist/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war.war
 resource.dir=setup
+run.classpath=
 source.root=.
