--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb/build.xml
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy" default="default" basedir="." xmlns:ear="http://www.netbeans.org/ns/j2ee-earproject/2">
-    <description>Builds, tests, and runs the project TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy.</description>
+<project name="TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb" default="default" basedir="." xmlns:ejbjarproject="http://www.netbeans.org/ns/j2ee-ejbjarproject/3">
+    <description>Builds, tests, and runs the project TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-ejb.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -16,19 +16,23 @@
     used for execution of your tasks. These targets are usually executed 
     before and after some main targets. They are: 
 
-      pre-init:                 called before initialization of project properties 
-      post-init:                called after initialization of project properties 
-      pre-compile:              called before javac compilation 
-      post-compile:             called after javac compilation 
-      pre-dist:                 called before archive building 
-      post-dist:                called after archive building 
-      post-clean:               called after cleaning build products 
-      pre-run-deploy:           called before deploying
-      post-run-deploy:          called after deploying
+      -pre-init:                 called before initialization of project properties
+      -post-init:                called after initialization of project properties
+      -pre-compile:              called before javac compilation
+      -post-compile:             called after javac compilation
+      -pre-compile-single:       called before javac compilation of single file
+      -post-compile-single:      called after javac compilation of single file
+      -pre-dist:                 called before archive building
+      -post-dist:                called after archive building
+      -post-clean:               called after cleaning build products
+      -pre-run-deploy:           called before deploying
+      -post-run-deploy:          called after deploying
+
+    (Targets beginning with '-' are not intended to be called on their own.)
 
     Example of pluging an obfuscator after the compilation could look like 
 
-        <target name="post-compile">
+        <target name="-post-compile">
             <obfuscate>
                 <fileset dir="${build.classes.dir}"/>
             </obfuscate>
@@ -41,8 +45,11 @@
     Other way how to customize the build is by overriding existing main targets.
     The target of interest are: 
 
+      init-macrodef-javac:    defines macro for javac compilation
+      init-macrodef-debug:    defines macro for class debugging
       do-dist:                archive building
       run:                    execution of project 
+      javadoc-build:          javadoc generation 
 
     Example of overriding the target for project execution could look like 
 
